# voicer

./: .gitignore  LICENSE  LICENSE-RU.md  Makefile  README.md  build_app.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/python/: __init__.py  clone_chunks.py  env_check.py  reference_text_to_translate.txt  reference_voice.txt  stress_overrides.txt  stress_utils.py  translate_with_gemma.py  voicer_app.py
src/python/translation_prompts/: prompt_clean_sub.txt  prompt_final.txt  prompt_translate.txt
tests/: conftest.py  test_clone_chunks.py  test_stress_utils.py
