[project]
name = "voicer"
version = "0.1.0"
description = "Translation and voice cloning: Ollama (translategemma) + Qwen3-TTS. GUI and CLI."
authors = [
    {name = "Marat Zimnurov", email = "zimtir@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "customtkinter (>=5.2.0)",
    "torch (>=2.10.0,<3.0.0)",
    "requests (>=2.28.0)",
    "mlflow[genai] (>=3.10.1,<4.0.0)",
    "openai (>=2.28.0,<3.0.0)",
    "huggingface-hub (>=0.34.0,<1.0)",
    "qwen-tts (>=0.1.1,<0.2.0)",
]
[project.scripts]
voicer = "python.voicer_app:main"
voicer-translate = "python.translate_with_gemma:main"
voicer-clone-chunks = "python.clone_chunks:main"

[tool.poetry]
packages = [{include = "python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.19.0,<7.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "black (>=24.0.0,<25.0.0)",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/python"]
addopts = "-v --tb=short"
